# optimark

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  compose.yaml  package.json
.github/workflows/: ci.yml  commitlint.yml  semantic-pr.yml
.husky/: commit-msg
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260409_0001_core_academic_domain.py  20260410_0002_add_enrollment_user_id_index.py  20260410_0003_add_auth_session_foundation.py
backend/apps/api/: README.md  pyproject.toml
backend/apps/api/src/optimark_athena/: __init__.py  __main__.py  app.py  auth_routes.py  config.py  dependencies.py
backend/apps/worker/: README.md  pyproject.toml
backend/apps/worker/src/optimark_hermes/: __init__.py  __main__.py
backend/tests/: conftest.py  test_academic_migrations.py  test_academic_service.py  test_api_auth.py  test_api_config.py  test_api_health.py  test_auth_service.py  test_worker_bootstrap.py
docs/: local-development-stack.md  optimark-ai-spec.md  optimark-ui-brief.md
docs/adr/: 0001-core-product-and-technology-stack.md  0002-modular-monolith-backend-with-worker.md  0003-generic-assessment-domain.md  0004-contract-driven-coding-engine.md  0005-hosted-saas-first.md  0006-frontend-bun-workspace-package-topology.md  0007-backend-uv-workspace-package-topology.md  README.md
docs/mockups/assignment_builder/: code.html
docs/mockups/gradebook/: code.html
docs/mockups/instructor_dashboard/: code.html
docs/mockups/scholar_precise/: DESIGN.md
frontend/: Dockerfile  README.md  package.json  tsconfig.json
(+9 files in other folders)
