[project]
name = "optimark-backend-workspace"
version = "0.1.0"
description = "Backend workspace root for Optimark"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "alembic>=1.16,<2.0",
  "httpx>=0.28,<0.29",
  "pytest>=8.4,<9.0",
  "pytest-cov>=7.0,<8.0",
  "ruff>=0.11,<0.12",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "packages/contracts",
  "packages/db",
  "packages/domain",
]

[tool.uv.sources]
athena = { workspace = true }
hermes = { workspace = true }
metis = { workspace = true }
mnemosyne = { workspace = true }
clio = { workspace = true }
