[project]
name = "athena"
version = "0.1.0"
description = "API application package for Optimark"
requires-python = ">=3.13"
dependencies = [
  "clio",
  "fastapi>=0.116,<1.0",
  "metis",
  "mnemosyne",
  "uvicorn>=0.35,<0.36",
]

[project.scripts]
athena-api = "optimark_athena.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimark_athena"]
